--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,9 @@
   <meta property="twitter:description"
     content="F*ck Fake Water">
   <meta property="twitter:image" content="src/assets/og-logo.svg">
+  <link rel="preload" href="/assets/Hero-desktop.webp" as="image" />
+<link rel="preload" href="/assets/Hero-mob.webp" as="image" media="(max-width: 768px)" />
+
 
 </head>
 
