--- a/client/index.html
+++ b/client/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Primary Meta Tags -->
   <title>OG Waters</title>
-  <meta name="title" content="OG Waters">
+  <meta name="title" content="OG Water">
   <meta name="description"
     content="F*ck Fake Water">
 
   <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.ogwater.in/">
-  <meta property="og:title" content="OG Waters">
+  <meta property="og:title" content="OG Water">
   <meta property="og:description"
     content="F*ck Fake Water">
   <meta property="og:image" content="src/assets/og-logo.svg">
@@ -22,7 +22,7 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://www.ogwater.in/">
-  <meta property="twitter:title" content="OG Waters">
+  <meta property="twitter:title" content="OG Water">
   <meta property="twitter:description"
     content="F*ck Fake Water">
   <meta property="twitter:image" content="src/assets/og-logo.svg">
